<resources>
    <string name="app_name">SOPViewer</string>

    <string name="nav_1_file_manager">File Manager</string>
    <string name="nav_2_connetion_manager">Connection Manager</string>
    <string name="nav_3_playlist">Playlist</string>
    <string name="nav_4_settings">Viewer Settings</string>
    <string name="nav_5_remote_file_manager">Remote File Manager</string>
    <string name="nav_6_play_item">Play Item</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="not_supported">Not supported</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="text_not_found">Text not found</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="enter_password">Enter password</string>
    <string name="label_source">Source:</string>
    <string name="label_last_update">Last update:</string>
    <string name="label_size">Size:</string>
    <string name="label_modify">Modify Date:</string>
    <string name="title_activity_pdfplay">PDFPlayActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="label_local">Local</string>
    <string name="label_sync">Sync</string>
    <string name="label_delete">Delete</string>
    <string name="label_create_folder">Create Folder</string>
    <string name="label_folder_name">Folder Name</string>
    <string name="label_sync_all">Sync All</string>
    <string name="label_file_name">File Name</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_select">Select</string>
    <string name="label_create">Create</string>
    <string name="label_edit">Edit</string>
    <string name="label_play">Play</string>
    <string name="label_add">Add</string>
    <string name="label_save">Save</string>
    <string name="label_name">Name</string>
    <string name="label_loop">Loop</string>
    <string name="label_page">Page</string>
    <string name="label_sec">Sec</string>
    <string name="label_select_file">Press to select file</string>
    <string name="dialog_alter">Alter</string>
    <string name="dialog_sure_sync">Synchronize?</string>
    <string name="dialog_folder_delete">If you select a folder, all files in folder will be deleted. Continue?</string>
    <string name="dialog_white_space">"Name" and "Loop" must be filled.</string>
    <string name="dialog_page_msg">"Page" Format error. </string>
    <string name="dialog_add_item">Must contain at least have one item.</string>
    <string name="dialog_select_file">Please select pdf file.</string>
    <string name="dialog_succeed">Succeed</string>
    <string name="dialog_failed">Failed</string>
    <string name="dialog_create_succeed">Succeed</string>
    <string name="dialog_create_failed">Failed</string>
    <string name="dialog_sync_succeed">Succeed</string>
    <string name="dialog_sync_failed">Failed</string>
    <string name="dialog_folder_exist">Folder is existed.</string>
    <string name="dialog_delete_succeed">Succeed</string>
    <string name="dialog_delete_failed">Failed</string>
    <string name="dialog_delete_record">Are you sure to delete record?</string>
    <string name="dialog_select_item">Must select one item</string>
    <string name="nav_7_file_browser">File Browser</string>
    <string name="dialog_folder_white">Folder name must be filled.</string>
    <string name="dialog_format_error">Format error</string>
    <string name="dialog_same_name">Name is existed.</string>
    <string name="label_connect">Connect</string>
    <string name="label_download">Download</string>
    <string name="label_fit_screen">Fit Screen</string>
    <string name="label_fit_width">Fit Width</string>
    <string name="label_fit_height">Fit Height</string>
    <string name="title_error">Error!!</string>
    <string name="connect_error">Connect Error!! Please check the Connection setting.</string>
    <string name="download_error">Download Error!! Please check the Connection setting.</string>
    <string name="title_alert">Alert!!</string>
    <string name="file_exist_overwrite">File exist!! Are you sure to overwrite?</string>
    <string name="download_finish">Download Finish.</string>
    <string name="title_connection_setting">Connection Setting</string>
    <string name="playlist_no_playitem">Play list include no play item!!</string>
    <string name="msg_json_error">Json format error.</string>
    <string name="msg_conn_error">Connection Format Error.</string>
    <string name="msg_play_error">PlayList Format Error.</string>
    <string name="msg_play_null">PlayListName is empty.</string>
    <string name="msg_Conn_null">ConnectionName is empty.</string>
</resources>
