<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <Button
                android:id="@+id/ItemButton_Flie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:stateListAnimator="@null"
                android:text="@string/label_select_file" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/lbl_Page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_page"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txt_page"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxLength="30"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lbl_Sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_sec"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txt_Sec"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="30"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/btn_Delete"
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:contentDescription="emptyText"
                android:src="@android:drawable/ic_menu_delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_fullPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</LinearLayout>